--- a/frontend/src/styles/LandingPage.css
+++ b/frontend/src/styles/LandingPage.css
@@ -85,11 +85,18 @@
     height: 60%;
   }
 
-  .info-container {
-    flex-direction: row;
+  .info-title {
+    color: var(--white);
+    font-size: 2.5em;
+    font-weight: 900;
   }
 
   .charts-container {
     flex-direction: row;
+  }
+
+  .chart-container {
+    width: 40%;
+    max-height: 400px;
   }
 }
