--- a/frontend/src/styles/LandingPage.css
+++ b/frontend/src/styles/LandingPage.css
@@ -8,8 +8,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  width: 100%;
-  padding: 20px 30px;
+  width: 80%;
 }
 
 .main-title {
@@ -45,7 +44,7 @@
   flex-direction: column;
   align-items: center;
   justify-content: space-evenly;
-  width: 90%;
+  width: 80%;
   padding: 50px;
 }
 
@@ -54,8 +53,8 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  width: 90%;
-  height: 90%;
+  width: 50%;
+  height: 50%;
 }
 
 @media screen and (min-width: 992px) {
@@ -85,6 +84,10 @@
     height: 60%;
   }
 
+  .info-container {
+    min-height: 88vh;
+  }
+
   .info-title {
     color: var(--white);
     font-size: 2.5em;
@@ -93,10 +96,10 @@
 
   .charts-container {
     flex-direction: row;
+    height: 60vh;
   }
 
   .chart-container {
     width: 40%;
-    max-height: 400px;
   }
 }
