Switch order of graphs

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -40,12 +40,18 @@ a {
   transition: all 0.3s ease-in-out;
 }
 
+.page-title {
+  font-size: 2rem;
+  font-weight: 700;
+  margin-bottom: 2rem;
+}
+
 @media screen and (min-width: 992px) {
   .content-page {
     display: flex;
     flex-direction: column;
     align-items: center;
-
-    padding-top: 10rem;
+    justify-content: center;
+    padding-top: 13vh;
   }
 }
