--- a/frontend/src/styles/HamburgerMenu.css
+++ b/frontend/src/styles/HamburgerMenu.css
@@ -9,7 +9,9 @@
   top: 0;
   left: -400px;
   transition: all 0.3s ease-out;
-  padding-top: 200px;
+  padding-top: 13vh;
+  max-height: 100vh;
+  overflow-y: scroll;
 }
 
 .sidebar.open {
