--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -13,6 +13,7 @@
 body {
   font-family: "Roboto", sans-serif;
   color: var(--black);
+  overflow-x: hidden;
 }
 
 .App {
@@ -44,6 +45,25 @@ a {
   font-size: 2rem;
   font-weight: 700;
   margin-bottom: 2rem;
+}
+
+.info-table {
+  width: 100%;
+  border-collapse: collapse;
+}
+
+.info-table th {
+  background-color: var(--dark-blue);
+  color: var(--white);
+  padding: 10px;
+  border: 1px solid var(--dark-blue);
+  text-align: center;
+}
+
+.info-table td {
+  padding: 10px;
+  border: 1px solid var(--dark-blue);
+  text-align: center;
 }
 
 @media screen and (min-width: 992px) {
