--- a/frontend/src/styles/DistrictResult.css
+++ b/frontend/src/styles/DistrictResult.css
@@ -1,22 +1,26 @@
-.region-res-container {
+.district-res-container {
   display: flex;
   flex-direction: column;
   align-items: center;
   width: 100%;
-  height: 100vh;
+  height: 80vh;
 }
 
-.region-res-charts {
+.district-title {
+  font-weight: bold;
+  margin-bottom: 20px;
+}
+
+.district-res-charts {
   display: flex;
   flex-direction: row;
   justify-content: space-around;
   align-items: center;
   width: 100%;
   height: 100%;
-  margin-top: 5em;
 }
 
-.region-res-section {
+.district-res-section {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -25,7 +29,15 @@
   height: 100%;
 }
 
-.extra-candidates-table-container {
+.district-info-tables {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+}
+
+.district-table-container {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -33,7 +45,11 @@
   margin-bottom: 50px;
 }
 
-.extra-candidates-title {
+.table-title {
   font-weight: bold;
   margin-bottom: 20px;
+}
+
+.district-table {
+  width: 60%;
 }
