--- a/frontend/src/styles/SeatDistribution.css
+++ b/frontend/src/styles/SeatDistribution.css
@@ -1,5 +1,5 @@
 .seat-dist-container {
-  height: 100vh;
+  min-height: 100vh;
 }
 
 .seat-dist-title {
@@ -9,18 +9,22 @@
 
 .seat-dist-content {
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   align-items: center;
   justify-content: center;
-  height: 60%;
+  min-height: 50vh;
   width: 100%;
+  padding: 2em;
+}
+
+.seat-dist-main-charts {
+  flex-direction: row;
 }
 
 .seat-dist-section {
   display: flex;
   flex-direction: column;
   align-items: center;
-
   width: 50%;
   height: 100%;
 
@@ -38,6 +42,7 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  width: 80%;
-  height: 80%;
+  width: 100%;
+  height: 100%;
+  min-height: 500px;
 }
