closest winners now displayed in separate tables for every party§

--- a/frontend/src/styles/Overview.css
+++ b/frontend/src/styles/Overview.css
@@ -15,6 +15,14 @@
   height: 100%;
 }
 
+
+.table-container {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
 .overview-section-title {
   font-weight: bold;
   font-size: 1.5rem;
