--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -13,7 +13,7 @@
 }
 
 body {
-  font-family: "Roboto", sans-serif;
+  font-family: "Questrial", sans-serif;
   color: var(--black);
   overflow-x: hidden;
 }
