--- a/frontend/src/styles/Login.css
+++ b/frontend/src/styles/Login.css
@@ -3,7 +3,7 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  margin-top: 5em;
+  height: 90vh;
 }
 
 .login-form {
