--- a/frontend/src/styles/Overview.css
+++ b/frontend/src/styles/Overview.css
@@ -15,7 +15,6 @@
   height: 100%;
 }
 
-
 .table-container {
   width: 100%;
   display: flex;
@@ -25,12 +24,35 @@
 }
 .overview-section-title {
   font-weight: bold;
-  font-size: 1.5rem;
+  font-size: 1.8rem;
   margin-bottom: 20px;
+}
+
+.closest-winners-explanation {
+  margin: 20px 0;
+  width: 50%;
+  text-align: center;
+}
+
+select {
+  appearance: none;
+  /* safari */
+  -webkit-appearance: none;
+  /* other styles for aesthetics */
+  width: 20%;
+  font-size: 1.15rem;
+  padding: 0.675em 6em 0.675em 1em;
+  background-color: var(--bayern-blue);
+  border: 1px solid #caced1;
+  border-radius: 0.25rem;
+  color: #fff;
+  cursor: pointer;
+  margin-bottom: 2em;
 }
 
 .overview-table {
   width: 80%;
+  margin: 20px;
 }
 
 .student-stats-container {
