--- a/frontend/src/styles/SeatDistribution.css
+++ b/frontend/src/styles/SeatDistribution.css
@@ -13,7 +13,7 @@
   align-items: center;
   justify-content: center;
   min-height: 50vh;
-  width: 100%;
+  width: 80%;
   padding: 2em;
 }
 
@@ -45,4 +45,5 @@
   width: 100%;
   height: 100%;
   min-height: 500px;
+  margin: 2em;
 }
