--- a/frontend/src/styles/RegionResult.css
+++ b/frontend/src/styles/RegionResult.css
@@ -3,7 +3,7 @@
   flex-direction: column;
   align-items: center;
   width: 100%;
-  height: 100vh;
+  height: 87vh;
 }
 
 .region-res-charts {
@@ -13,16 +13,16 @@
   align-items: center;
   width: 100%;
   height: 100%;
-  margin-top: 5em;
+  margin-top: 1em;
 }
 
 .region-res-section {
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin: 10px 20px;
-  width: 40%;
-  height: 100%;
+  margin: 10px;
+  width: 25%;
+  height: 80%;
 }
 
 .extra-candidates-table-container {
