--- a/frontend/src/styles/LandingPage.css
+++ b/frontend/src/styles/LandingPage.css
@@ -51,6 +51,15 @@
   height: 50%;
 }
 
+.scatter-charts-container {
+  display: block;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-evenly;
+  width: 80%;
+  padding: 50px;
+}
+
 @media screen and (min-width: 992px) {
   .title-container {
     padding: 20px 50px;
